--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "postinstall": "prisma generate || true"
+    "lint": "eslint"
   },
   "engines": {
     "node": "^20 || ^22"
