--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "prebuild": "rm -rf node_modules/.prisma/client",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
