--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "prebuild": "rm -rf node_modules/.prisma/client",
-    "build": "prisma generate --schema=./prisma/schema.prisma --force && next build",
+    "build": "npx prisma generate --schema=./prisma/schema.prisma --force && next build",
     "start": "next start",
     "lint": "eslint",
     "postinstall": "rm -rf node_modules/.prisma/client"
