--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "prebuild": "rm -rf node_modules/.prisma/client",
-    "prisma:generate": "npx prisma generate --schema=./prisma/schema.prisma --force",
+    "prisma:generate": "npx prisma generate --schema=./prisma/schema.prisma --force || (echo 'Prisma generate failed' && exit 1)",
     "build": "npm run prisma:generate && next build",
     "start": "next start",
-    "lint": "eslint",
+    "lint": "eslint . --max-warnings=0",
     "postinstall": "rm -rf node_modules/.prisma/client"
   },
   "engines": {
