--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "prebuild": "rm -rf node_modules/.prisma/client",
-    "prisma:generate": "npx prisma generate --schema=./prisma/schema.prisma --force || (echo 'Prisma generate failed' && exit 1)",
+    "prebuild": "rm -rf node_modules/.prisma/client || true",
+    "prisma:generate": "prisma generate --schema=./prisma/schema.prisma",
     "build": "npm run prisma:generate && next build",
     "start": "next start",
     "lint": "eslint . --max-warnings=0",
-    "postinstall": "rm -rf node_modules/.prisma/client"
+    "postinstall": "rm -rf node_modules/.prisma/client || true"
   },
   "engines": {
     "node": "^20 || ^22"
